# caseClipper

./: .gitignore  BUILD_FIX.md  CLAUDE.md  ENVIRONMENT_STATUS.md  GIT_WORKFLOW.md  QUICKSTART.md  README.md  build.ps1  build.py  caseclipsaver.code-workspace  caseclipsaver.py  config.json  make.ps1  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.ps1  sample_data.txt  setup-venv.ps1  setup.cfg  setup.ps1  test-executable.ps1  test_run.py  test_simple.py
resources/: config.json
src/: __init__.py  _version.py  clipboard_monitor.py  config.py  context_processor.py  create_icon.py  data_parser.py  file_manager.py  logger.py  main.py  tray_ui.py
tests/: __init__.py  test_data_parser.py  test_file_manager.py
